Update data component usage by merging in sc/merge-1.20-on-3605 and fixing up, and add back Create integration